--- a/imageeditor.css
+++ b/imageeditor.css
@@ -1,11 +1,62 @@
 .abt {
-    background-color:purple;
+    width:3.5in;
+    height:2in;
+    margin: 1rem auto;
+    perspective: 1000px;
 }
 
+.abt_flip {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.9s;
+    transform-style: preserve-3d;
+}
+
+.abtfrontcont {
+    background-color:rgb(255, 252, 233);
+}
+
+.abtflipcont{
+    background-color:rgb(255, 252, 233);
+    transform: rotateY(180deg);
+}
+
+.abtfrontcont,
+.abtflipcont {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   backface-visibility: hidden;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   border-radius: 0.5rem;
+}
+
+.abt:hover .abt_flip{
+    transform: rotateY(180deg);
+  }
+
+#boxforid {
+    margin: 0;
+    padding: 0;
+    min-height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    font-family: sans-serif;
+    background-color: #f1f1f100; 
+} 
+
 #abt_aaron{
-    background-color:red;
+    background-color:pink
 }
 
 #abt_andrew{
-    background-color:pink
+    background-color:blanchedalmond
+}
+
+#abt_dia {
+    background-image: url("https://i.pinimg.com/originals/15/40/bb/1540bbaace7590207077fca739929e05.gif");
 }
