--- a/fonts.css
+++ b/fonts.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: "EB Garamond SC";
-    src: url("C:\Users\skype\Downloads\eb_garamond\EB_Garamond\EBGaramondSC.otf");
+    src: url("C:\Users\skype\.vscode\Website\EBGaramondSC.otf");
   }
 
   
 
-/*"./fonts/MyCustomFont.ttf"
+/*"./fonts/MyCustomFont.ttf
